修正显示样式

--- a/vim/操作闭合符号内部内容.md
+++ b/vim/操作闭合符号内部内容.md
@@ -8,12 +8,12 @@
 然后再进行删除或复制等操作。  
 ### 解决办法:
 1. 比如现在要复制示例1括号中的内容，具体操作如下:  
-先将光标移动到括号内的任意位置，然后依次按下列键  
-```
-yi(
-```
-其中y为复制的意思，i为内部的意思，(代表括号的意思，  
-连起来就是复制括号内部的内容。  
+    * 先将光标移动到括号内的任意位置
+    * 然后依次按下列键```yi(```  
+
+> 其中y为复制的意思，i为内部的意思，(代表括号的意思，  
+> 连起来就是复制括号内部的内容。  
+
 2. 按照上面的逻辑，删除示例2双引号中的内容，操作如下:  
     * 先将光标移动到双引号内，任意位置  
     * 依次按下```di"```，(这里双引号的输入是要按shift键)  
