批量删除本地存储的关联失效的远程分支

--- a/git/删除分支.md
+++ b/git/删除分支.md
@@ -52,4 +52,14 @@ git push origin :do-something
 git branch -r -d origin/do-something
 ```
 
-这个命令是用来删除你本地存储的远程分支，对远程代码库没有影响
+这个命令是用来删除你本地存储的远程分支，对远程代码库没有影响  
+
+有时候别人删除了很多远程分支，但是你  
+```
+git branch -a
+```
+仍然能看到，可以使用命令:
+```
+git remote prune origin
+```
+一次性把所有已经没有远程分支的本地存储的远程分支删除
