同步有道云笔记

--- a/celery/优先级队列.md
+++ b/celery/优先级队列.md
@@ -5,7 +5,7 @@ Celery指定多种优先级队列
 
 app.py
 ```
-app = Celery('app', broker='redis://:123456@192.168.31.129:7000')
+app = Celery('app')
 app.config_from_object('celeryconfig')
 
 @app.task
@@ -20,11 +20,29 @@ celeryconfig.py
 ```
 from kombu import Exchange, Queue
 
+# 这是直接用redis做broker配置，我们没有使用
+# BROKER_URL = 'redis://:123456@192.168.31.129:7000'
+
+# 下面是用sentinels做broker
+sentinels = [
+    'sentinel://192.168.0.130:10001/2',
+    'sentinel://192.168.0.131:10001/2',
+    'sentinel://192.168.0.132:10001/2',
+]
+
+BROKER_URL = ';'.join(sentinels)
+BROKER_TRANSPORT_OPTIONS = {'master_name': 'mymaster'}
+MAX_TASKS_PER_CHILD = 20
+
+# 配置多个队列
 CELERY_DEFAULT_QUEUE = 'default'
 CELERY_QUEUES = (
-    Queue('default', Exchange('default'), routing_key='default'),
-    Queue('low_priority', Exchange('low_priority'), routing_key='low_priority'),
-    Queue('high_priority', Exchange('high_priority'), routing_key='high_priority'),
+    Queue('default', Exchange('default'), routing_key='default',
+        consumer_arguments={'x-priority': 20}),
+    Queue('low_priority', Exchange('low_priority'), routing_key='low_priority',
+        consumer_arguments={'x-priority': 10}),
+    Queue('high_priority', Exchange('high_priority'), routing_key='high_priority',
+        consumer_arguments={'x-priority': 30}),
 )
 
 CELERY_ROUTES = {
