--- a/jenkins/安装.md
+++ b/jenkins/安装.md
@@ -14,7 +14,7 @@ docker pull jenkinsci/blueocean
 3. 运行  
 ```
 docker run \
-  --name jenkins
+  --name jenkins \
   -u root \
   --rm \
   -d \
@@ -32,4 +32,3 @@ docker run \
 > 这里需要先获取一下初始的密码，具体操作:  
 > ```docker exec -it jenkins bash```进入jenkins运行的容器环境内。  
 > 查看文件```/var/jenkins_home/secrets/initialAdminPassword```内的密码  
-
