--- a/analysis/分析微信回复及时性.md
+++ b/analysis/分析微信回复及时性.md
@@ -50,12 +50,12 @@ def p2p(filepath, delay_hour):
     df['delay'] = df['msg_time'] - df['up_msg_time']
     # 延迟时间从秒转成小时，方便查看
     df['delay_hour'] = df['delay'].apply(time_utils.sec_2_hour)
-    tname_reg = '老师|班主任'
+    sname_reg = '老师|班主任'
     exact = ['好', '嗯', '是', '[OK]']
     up_msg_reg = '谢谢|好的|收到|是的|嗯嗯|明白了|好|谢|[OK]|我是|知道|\[.*?\]|可以'
     delay_df = df[(df.delay>delay)\  # 筛选出大于设置的延迟时间的记录
             &(df.msg.str.len()<100)  # 排除出老师的消息内容比较长的记录
-            &(df.tname.str.contains(tname_reg, na=True))\  # 
+            &(~df.sname.str.contains(sname_reg, na=True))\  # 排除接收方为老师的
             &(df.tname==df.up_tname)\
             &(df.is_send==1)\  # 只要老师的发送的消息
             &(df.is_send!=df.up_is_send)\  # 不要连续两条都是老师的消息
