--- a/python/异步调用.md
+++ b/python/异步调用.md
@@ -25,4 +25,26 @@ loop.close()
 print('task result', '#'*100)
 for task in tasks:
     print(task.result())
+``
+
+> 可以将aiohttp换成requests来尝试一下，有什么不同   
 ```
+import asyncio
+import requests
+
+urls = ['http://baidu.com'] * 100
+print(urls)
+
+async def get_url_content(url):
+    resp = requests.get(url)
+    return resp.text
+
+loop = asyncio.get_event_loop()
+tasks = [asyncio.ensure_future(get_url_content(urls[i])) for i in range(len(urls))]
+loop.run_until_complete(asyncio.wait(tasks))
+loop.close()
+
+print('task result', '#'*100)
+for task in tasks:
+    print(task.result())
+``
