存在容器增加重启功能

--- a/docker/自动重启容器.md
+++ b/docker/自动重启容器.md
@@ -7,3 +7,7 @@
 ```
 docker run --restart=always --name sql5.7 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root -d mysql:5.7
 ```
+如果在创建的时候没有加这个参数可以在之后执行如下操作:  
+```
+docker container update --restart=always sql5.7
+```
