增加内存管理内容

--- a/python/内存管理.md
+++ b/python/内存管理.md
@@ -27,3 +27,23 @@ python是如何管理内存的
 然后，查找access链表，看看有没有A对象内部引用了B对象，但是这个B对象却在inaccess表中的情况，  
 如果有，那么就把这个B对象重新拿回access链表。  
 当所有对象都检查完了，就把inaccess链表上的对象都释放了。  
+
+> 可以使用命令来查看一个对象的引用个数
+```
+import sys
+help(sys.getrefcount)
+```
+> 这里注意看人家的描述说，你查到的计算是比你实际的大。  
+> 因为在调用这个方法本身时，就有一次临时引用，所以一般情况下我们的结果会比实际多1  
+> 注意，不要用ipython来测试，因为ipython本身还有其它操作，所以导致引用个数更多。  
+
+```
+>>> import sys
+>>> a = 100*1000
+>>> sys.getrefcount(a)
+2
+>>>
+```
+
+> 你可能看以上内容看不明白，如果是这样的建议，百度搜索 python内存回收机制 看看别人描述的。  
+> 讲的要么不详细，要么部分是错的，等看了几篇之后再看这个就明白怎么回事了。  
