--- a/experience/有关状态属性的一种记录方式.md
+++ b/experience/有关状态属性的一种记录方式.md
@@ -32,3 +32,31 @@ status |= ST_SCHOOLTIME
 然后使用这个status去查找。
 > 这里不难发现，我们在定义状态值的时候是按位来定义的，也就是2**n(2的n次方)，  
 > 这样定义可以方便我们通过位运算来组合状态值。  
+
+##### 详细举例：
+现在有一个用户表user，这个表有一个字段status，而用户可能状态如下：
+```
+ST_AAA = 2 ** 0
+ST_BBB = 2 ** 1
+ST_CCC = 2 ** 2
+ST_DDD = 2 ** 3
+```
+在使用mysql时，我们可以使用如下操作：
+```
+-- 获取状态包含 ST_BBB 的用户
+SELECT * FROM user WHERE status & ST_BBB;
+
+-- 获取状态包含 ST_BBB 或 ST_CCC 的用户
+SELECT * FROM user WHERE status & (ST_BBB | ST_CCC);
+
+-- 获取状态不包含ST_BBB和ST_CCC任何一种的用户
+SELECT * FROM user WHERE not status & (ST_BBB | ST_CCC)
+
+-- 增加状态ST_DDD
+UPDATE user SET status = status | ST_DDD WHERE not status & ST_DDD;
+
+-- 去掉状态ST_AAA
+UPDATE user SET status = status ^ ST_AAA where status & ST_AAA;
+-- 这里需要记录，异或操作会把有的去掉，没有的加上，而我们的需求可能只是有的去掉，  
+-- 所以后面的where语句一定要准确，也就是一定要筛选出来带有ST_AAA状态的记录。
+```
