--- a/experience/有关状态属性的一种记录方式.md
+++ b/experience/有关状态属性的一种记录方式.md
@@ -43,24 +43,24 @@ ST_DDD = 2 ** 3
 ```
 在使用mysql时，我们可以使用如下操作：
 
-###### - 获取状态包含 ST_BBB 的用户
+###### 1. 获取状态包含 ST_BBB 的用户
 ```
 SELECT * FROM user WHERE status & ST_BBB;
 ```
 
-###### - 获取状态包含 ST_BBB 或 ST_CCC 的用户
+###### 2. 获取状态包含 ST_BBB 或 ST_CCC 的用户
 ```
 SELECT * FROM user WHERE status & (ST_BBB | ST_CCC);
 ```
-###### - 获取状态不包含ST_BBB和ST_CCC任何一种的用户
+###### 3. 获取状态不包含ST_BBB和ST_CCC任何一种的用户
 ```
 SELECT * FROM user WHERE not status & (ST_BBB | ST_CCC)
 ```
-###### - 增加状态ST_DDD
+###### 4. 增加状态ST_DDD
 ```
 UPDATE user SET status = status | ST_DDD WHERE not status & ST_DDD;
 ```
-###### - 去掉状态ST_AAA
+###### 5. 去掉状态ST_AAA
 ```
 UPDATE user SET status = status ^ ST_AAA where status & ST_AAA;
 ```
