--- a/redis/分布式锁实现.md
+++ b/redis/分布式锁实现.md
@@ -36,6 +36,9 @@ end
 4. 上面保证了我们不要误释放别人的锁，但是如果我们使用锁的时间超时了，别人也获取到了锁，  
 那么其实这种情况下，就又出现了竞争关系。
 > 这种情况，现在的解决方案就是，我们要根据我们实际的情况来设置这个超时时间  
+> 其实这里可以这样想，如果一切正常的情况下，不论我们设置的超时时间有多长，  
+> 我们都会在用完资源会主动释放锁的，所以不会因为超时时间设置长了，导致出问题。  
+> 会出问题的情况是，获取了锁，但是锁主人挂了，这样这个超时时间就影响到了资源的使用。  
 
 ### 参考资料
 [官方redis实现分布式锁文档](https://redis.io/topics/distlock)  
