--- a/redis/分布式锁实现.md
+++ b/redis/分布式锁实现.md
@@ -8,16 +8,19 @@
 1. 在redis中以```SET key val NX```设置，这意思是如果不存在这个key就设置，  存在就不设置。
 > 比如同一个资源，我们就用统一的key，谁在调用SET的时候返回成功就是获取了锁，  
 > 那么谁就获取到了这个资源的使用权。当使用完成后，就需要DEL key，就释放了锁。
+
 2. 但是在分布式系统中，A服务器获取了锁，但是A却挂了，那么这个锁就没有人释放了，导致资源不可用。
 > 这种情况是很容易预想到的，因此为了避免这种情况，在设置时增加key的超时时间。  
 > ```SET key val NX PX ttl```这里ttl就是超时时长，单位为毫秒。这样在获取锁的服务挂了后，  
-> 资源在过了超时时间后，又变成可用状态。  
+> 资源在过了超时时间后，又变成可用状态。 
+
 3. 上面增加了超时时间，如果A获取到了锁，但是A使用资源的时间大于了设置的超时时间。  
 这就导致锁因超时释放了，又被其它服务获取到了。等A执行完成后，又想去DEL key时，  
 其实这个锁已经不属于自己了，这样就又误释放了别人的锁。  
 > 出现这种情况我们就是要想办法知道这个key还是不是我们当初设置的key，因此就通过给key设置的val来解决  
 > 我们把val值，弄成一个唯一值，不同服务在设置key时的val不同(可以使用uuid或者当前时间戳加客户id等)，  
 > 现在我们在释放锁的时候先取key的val，然后和自己设置时的val比较，如果相同就DEL key。  
+
 ```
 if (GET key == val):
     DEL key
@@ -39,6 +42,16 @@ end
 > 其实这里可以这样想，如果一切正常的情况下，不论我们设置的超时时间有多长，  
 > 我们都会在用完资源会主动释放锁的，所以不会因为超时时间设置长了，导致出问题。  
 > 会出问题的情况是，获取了锁，但是锁主人挂了，这样这个超时时间就影响到了资源的使用。  
+
+5. 上面描述的是单redis server的情况，但是单server容易出现单点故障，redis一挂，整个都不能用了。  
+> 要解决这个问题，最容易想的肯定是做主从同步，主挂了，从顶上去。但是主从同步是异步进行的。  
+> A设置了key后，在没有同步到slaver时，master挂了，然后slaver成了master，因为slaver没有同步到A设置的key，  
+> 现在其它人又可以设置key了，这样就又出现了竞争异常了。因此主从同步在这是不安全的。  
+> 解决这个问题使用了多个独立的redis实例，每个实例经历的操作同上面的上样，  
+> 只是如果A想要获取资源的使用权，就必须在一半以上的redis实例上设置了锁。  
+> 并且在所有加锁的总耗时不能超过设置的超时时长。  
+
+6. 上面所有都处理了，其实还有很多种情况下会有坑，需要具体情况具体解决。  
 
 ### 参考资料
 [官方redis实现分布式锁文档](https://redis.io/topics/distlock)  
