--- a/redis/分布式锁实现.md
+++ b/redis/分布式锁实现.md
@@ -11,7 +11,7 @@
 
 2. 但是在分布式系统中，A服务器获取了锁，但是A却挂了，那么这个锁就没有人释放了，导致资源不可用。
 > 这种情况是很容易预想到的，因此为了避免这种情况，在设置时增加key的超时时间。  
-> ```SET key val NX PX ttl```这里ttl就是超时时长，单位为毫秒。这样在获取锁的服务挂了后，  
+> ```SET key val NX PX ttl```这里PX ttl就是设置超时时长，ttl为时长单位为毫秒。这样在获取锁的服务挂了后，  
 > 资源在过了超时时间后，又变成可用状态。 
 
 3. 上面增加了超时时间，如果A获取到了锁，但是A使用资源的时间大于了设置的超时时间。  
