丰富主从同步

--- a/mysql/主从同步.md
+++ b/mysql/主从同步.md
@@ -58,3 +58,14 @@ show slave status \G;
 > Slave_IO_Running 和 Slave_SQL_Running 均为 Yes，则同步正常执行  
 > 如果不都是Yes，则需要排查主服务器是否可以正常连接等(防火墙、端口是否开放、绑定的IP地址等)  
 > Seconds_Behind_Master 代表落后master的秒数，为0则同步完成  
+
+### 备注
+mysql主从同步从数据同步方式分：
+1. sql语句同步(SBR)
+2. 行数据同步(RBR)
+3. 1与2混合同步(MBR)
+
+mysql主从同步策略方式分：
+1. master不push binlog到slave，slave主动从master获取binlog
+2. master在至少一台slave返回同步完成信息后，才commit。
+3. master在所有slave都返回同步完成信息后，才commit。
