默认持久化

--- a/redis/持久化.md
+++ b/redis/持久化.md
@@ -4,6 +4,7 @@ redis中持久化相关问题
 在redis中有两种持久化策略: RDB、AOF  
 1. RDB  
 指定一定时间间隔生成当前数据集的快照。比如60秒内至少有100个key被更新就执行一次自动保存快照。  
+redis默认是开启RDB持久化的。  
 
 2. AOF
 记录所有执行过的写操作命令，默认每秒fsync，也可以不fsync或者每次写操作都fsync。  
