--- a/nginx/日志分析.md
+++ b/nginx/日志分析.md
@@ -17,3 +17,9 @@ cat access.log | awk '($NF > 0.4) {print $3 "  " $NF}'
 cat access.log | awk '{print $3}' | uniq -c | sort -t '' -k1nr | more
 ```
 > 通过对每秒重复次数进行统计，并且进行排序输出  
+
+3. 统计每秒吞吐量分布  
+```
+cat access.log | awk '{print $3}' | uniq -c | sort -t '' -k1nr | awk '{print $1}' | uniq -c
+```
+> ```awk '{sum += $1};END {print sum}'```对一列进行求和  
