--- a/jenkins/安装.md
+++ b/jenkins/安装.md
@@ -16,7 +16,7 @@ docker pull jenkinsci/blueocean
 docker run \
   --name jenkins \
   -u root \
-  --rm \
+  --restart=always \
   -d \
   -p 8080:8080 \
   -p 50000:50000 \
