--- a/bash/使用模板文件.md
+++ b/bash/使用模板文件.md
@@ -15,10 +15,10 @@ upstream=${domain/.com/}
 upstream=${upstream/./-}
 echo $upstream
 
-sed "s/domain/$domain/g" tpl.conf > inside/$domain.conf
-sed -i "s/upstream/$upstream/g" inside/$domain.conf
+sed "s/domain/$domain/g" tpl.conf > conf/$domain.conf
+sed -i "s/upstream/$upstream/g" conf/$domain.conf
 
-sed "s/name/$upstream/g" upstream.conf > inside-upstream/$domain.conf
+sed "s/name/$upstream/g" upstream.conf > upstream/$domain.conf
 
 index=0
 for i in $*
@@ -30,8 +30,8 @@ do
     fi
     server="server $i:$port weight=3 max_fails=2 fail_timeout=30;"
     echo $server
-    sed -i "2i$server" inside-upstream/$domain.conf
-    sed -i "2s/^/    /" inside-upstream/$domain.conf
+    sed -i "2i$server" upstream/$domain.conf
+    sed -i "2s/^/    /" upstream/$domain.conf
 done
 ```
 tpl.conf内容:  
@@ -54,3 +54,8 @@ upstream.conf内容:
 upstream name {
 }
 ```
+
+> 主要是通过执行upstream.sh，将tpl.conf生成为nginx server文件，  
+> 将upstream.conf生成为upstream配置文件，  
+> nginx server文件和upstream配置文件都使用域名加.conf为文件名  
+> nginx server文件放入conf目录下、upstream配置文件放入upstream目录  
