修正部署替换功能

--- a/bash/使用模板文件.md
+++ b/bash/使用模板文件.md
@@ -11,8 +11,12 @@ domain=$1
 port=$2
 echo $domain
 echo $port
-upstream=${domain/.com/}
-upstream=${upstream/./-}
+# upstream=${domain/.com/}
+# 这里其实也可能有问题，应该从右侧开始去掉第一个匹配的
+upstream=${domain%.com}
+# upstream=${upstream/./-}
+# 这里出现了一个问题，一个斜线只替换一个匹配的，两个斜线才会全部替换
+upstream=${upstream//./-}
 echo $upstream
 
 sed "s/domain/$domain/g" tpl.conf > conf/$domain.conf
