--- a/nginx/前端配置.md
+++ b/nginx/前端配置.md
@@ -30,3 +30,9 @@ server {
 
 > 其中domain为域名，service_dir为项目部署的目录，一般root直接指到此目录下的dist目录  
 > log目录根据实际路径配置  
+
+```try_files $uri $uri/ /index.html;```
+> 这个配置主要解决的问题，当打开一个页面后，重新build前端项目部署，如果之前打开的页面不刷新，会访问原来的静态文件，  
+> 因为重新部署后，静态文件名字变了，就导致访问原来的静态文件会404，  
+> 这样配置后，如果静态文件404了，就会返回新的index.html，  
+> 里面就是访问新的静态文件了  
