增加图片效果

--- a/fe/代码变更对比.md
+++ b/fe/代码变更对比.md
@@ -102,6 +102,9 @@ export default {
 </style>
 ```
 
+显示效果：  
+![对比效果图片](https://github.com/bxxfighting/knowledge/blob/master/fe/asset/%E4%BB%A3%E7%A0%81%E5%AF%B9%E6%AF%94.jpg)  
+
 ### 参考文档
 1. [CodeMirror官网](https://codemirror.net/)  
 2. [diff-match-patch文档](https://www.npmjs.com/package/diff-match-patch)  
