--- a/algorithm/均分机器.md
+++ b/algorithm/均分机器.md
@@ -1,8 +1,8 @@
-问题：
+### 问题：
 现在有八台机器可以执行ansible-playbook用来部署服务，需要部署的机器数量不定  
 如何实现八台机器均分机器数量  
 
-解决办法：
+### 解决办法：
 ```
 from random import randint
 
