--- a/algorithm/均分机器.md
+++ b/algorithm/均分机器.md
@@ -18,6 +18,9 @@ ansible_ips = [
 ]
 
 def random_gen_ips():
+    '''
+    随机生成IP列表，模拟需要部署的机器
+    '''
     ips = ['192.168.18.{}'.format(randint(2, 256)) for i in range(1, randint(5, 100))]
     return list(set(ips))
 
@@ -57,3 +60,10 @@ def display_result():
 
 display_result()
 ```
+
+> 上面主要逻辑就是使用pyhton的列表分片功能来减少循环次数  
+> 一堆机器，先计算能等分的部署，比如100台机器被8台ansible机器划分时，就是每台ansible分配12台机器, 即(int(100/8)).  
+> 然后剩下 100 - 8 * 12 = 4，就是4台机器，那么这四台，就给前四台ansible机器每个分配一个就完成了.  
+> 原本可以分成两次循环，一次循环分配int(100/8)那批机器，再一次循环分配剩下的 100 - 8 * 12那批机器.  
+> 但是我们可以写成一次循环，int(100/8)这批机器通过列表前面的数据分配，而100 - 8 * 12这批机器通过列表的尾部分配  
+> 这样就完成了  
